<?xml version="1.0"?>
<package format="2">
  <name>force_keyboard_py</name>
  <version>0.0.0</version>
  <description>Generic keyboard for sending force values (in Python) Based off on the teleop_twist_keyboard Python ROS node.</description>
  <description>https://github.com/methylDragon/teleop_twist_keyboard_cpp</description>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
</package>